--- a/docs/style.css
+++ b/docs/style.css
@@ -55,3 +55,21 @@ main>form>input:focus {
 main>form>label {
     font-family: 'Noto Sans Mono', monospace;
 }
+
+div.timer-area {
+    font-family: 'Noto Sans Mono', monospace;
+    font-size: 4rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+@media (max-width: 799px) {
+    div.timer-area {
+        font-size: 2.5rem;
+    }
+}
+
+div.message-area {
+    font-size: 3rem;
+    text-align: center;
+}
