--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,9 @@
+html,
+body {
+    height: 100%;
+    margin: 0;
+}
+
 html {
     font-family: 'Noto Sans JP', sans-serif;
     font-weight: 400;
@@ -5,7 +11,8 @@ html {
 }
 
 body {
-    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
@@ -28,6 +35,7 @@ footer {
 
 main {
     padding: 10px 0;
+    flex-grow: 1;
 }
 
 main>form {
