--- a/docs/style.css
+++ b/docs/style.css
@@ -54,9 +54,11 @@ main {
 main>form {
     font-family: 'Noto Sans Mono', monospace;
     font-size: 1.25rem;
-    width: 100%;
+    width: calc(100% - 15px);
     color: #ffffff;
     background-color: #444444;
+    border-radius: 10px;
+    padding: 5px 5px 5px 10px;
 }
 
 main>form>input {
@@ -75,6 +77,10 @@ main>form>input:focus {
 
 main>form>label {
     font-family: 'Noto Sans Mono', monospace;
+    user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
 
 div.timer-area {
