--- a/docs/style.css
+++ b/docs/style.css
@@ -61,18 +61,17 @@ main {
 main>form {
     font-family: 'Noto Sans Mono', monospace;
     font-size: 1.25rem;
-    width: calc(100% - 15px);
+    width: calc(100% - 1.5rem);
     color: #ffffff;
     background-color: #444444;
     border-radius: 10px;
-    padding: 5px 5px 5px 10px;
+    padding: 0.5rem 0.5rem 0.5rem 1rem;
 }
 
 main>form>input {
     font-family: 'Noto Sans Mono', monospace;
     font-size: 1.25rem;
-    padding: 1%;
-    width: 95%;
+    width: calc(100% - 1.5rem);
     color: #ffffff;
     background-color: #444444;
     border: none;
@@ -84,6 +83,7 @@ main>form>input:focus {
 
 main>form>label {
     font-family: 'Noto Sans Mono', monospace;
+    margin-right: 0.5rem;
     user-select: none;
     -ms-user-select: none;
     -moz-user-select: none;
