--- a/docs/style.css
+++ b/docs/style.css
@@ -77,6 +77,12 @@ main>form>input {
     border: none;
 }
 
+@media (max-width: 799px) {
+    main>form>input {
+        width: calc(100% - 2rem);
+    }
+}
+
 main>form>input:focus {
     outline: none;
 }
