--- a/docs/style.css
+++ b/docs/style.css
@@ -106,6 +106,11 @@ main>form>label {
     }
 }
 
+output {
+    height: 1rem;
+    display: block;
+}
+
 div.timer-area {
     font-family: 'Noto Sans Mono', monospace;
     font-size: calc(calc(100vw - 10%) / 7);
