--- a/style.css
+++ b/style.css
@@ -181,13 +181,10 @@ footer {
     width: 90%;
     margin: 20px auto;
     margin-top: 40px;
-}
-
-footer>div {
-    margin: 10px 0;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.5rem 1.5rem;
 }
 
 footer a {
@@ -197,22 +194,6 @@ footer a {
 
 footer a:visited {
     color: var(--a-visited-color);
-}
-
-@media (max-width: 799px) {
-    footer {
-        margin-top: 20px;
-    }
-
-    footer>div {
-        width: 100%;
-        margin: 0 auto;
-        flex-direction: column;
-    }
-
-    footer div.footer-item {
-        margin: 0 auto;
-    }
 }
 
 /*
